make sure that the content box doesn't bleed over
switch from margin to padding

--- a/CampusMap2010/Content/src/scss/wsu_maps.infobox.scss
+++ b/CampusMap2010/Content/src/scss/wsu_maps.infobox.scss
@@ -153,7 +153,6 @@ img.open_marker {
 					color: $color_shark_approx;
 				}
 			}
-/**/
 		}
 	}
 	/*.ui-tabs-panel-cap {
@@ -182,7 +181,7 @@ img.open_marker {
 			overflow-x: hidden;
 			overflow-y: auto;
 			padding: 0 15px;
-			padding-bottom:2em;
+			margin-bottom:2em;
 			left: 0;
 			top: 0;
 			//float: left;
